@@ -18,8 +18,8 @@ EBNF and ABNF are not supported but  in my plans for the near future.
 
 When developing this mode, the following RFCs were taken into account:
 
-- [[https://www.ietf.org/rfc/rfc822.txt][RFC822]]: Standard for ARPA Internet Text Messages
-- [[https://www.ietf.org/rfc/rfc5234.txt][RFC5234]]: Augmented BNF for Syntax Specifications: ABNF
+- [[https://tools.ietf.org/html/rfc822][RFC822]]: Standard for ARPA Internet Text Messages
+- [[https://tools.ietf.org/html/rfc5234][RFC5234]]: Augmented BNF for Syntax Specifications: ABNF
 - [[https://tools.ietf.org/html/rfc7405][RFC7405]]: Case-Sensitive String Support in ABNF
 
 ** Features
@@ -89,6 +89,7 @@ To see what has changed in recent versions of BNF Mode, see the [[https://github
 
 ** External Links
 
+- [[https://www.masswerk.at/algol60/report.htm][Revised Report on the Algorithmic Language Algol 60]]
 - [[https://en.wikipedia.org/wiki/Backus%E2%80%93Naur_form][Wikipedia: Backus–Naur form]]
 - [[https://en.wikipedia.org/wiki/Extended_Backus%25E2%2580%2593Naur_form][Wikipedia: Extended Backus–Naur form]]
 - [[https://en.wikipedia.org/wiki/Augmented_Backus%25E2%2580%2593Naur_form][Wikipedia: Augmented Backus–Naur form]]
